--- a/apps/mix-cms/src/assets/styles/variables.scss
+++ b/apps/mix-cms/src/assets/styles/variables.scss
@@ -28,6 +28,7 @@ html {
 
   --primary-color: rgb(10, 120, 190);
   --default-primary-color-hue: 210;
+  --success-color: #20c997;
 
   --link-color: rgba(27, 31, 59, 0.65);
   --text-color-primary: #212121;
