--- a/apps/mix-cms/src/app/components/entity-form/entity-form.component.scss
+++ b/apps/mix-cms/src/app/components/entity-form/entity-form.component.scss
@@ -36,3 +36,19 @@ mix-entity-form {
     justify-content: space-between;
   }
 }
+
+.data-type-picker-dialog-container {
+  width: 100%;
+  max-height: 80vh;
+  overflow: auto;
+  overflow-x: hidden;
+
+  .data-type-card {
+    width: 100%;
+
+    .inner {
+      margin: 1rem 0;
+      white-space: normal;
+    }
+  }
+}
