--- a/apps/mix-cms/src/app/components/entity-form/entity-form.component.html
+++ b/apps/mix-cms/src/app/components/entity-form/entity-form.component.html
@@ -2,7 +2,7 @@
      [class.--new]="entity.new"
      [formGroup]="form">
   <div class="row">
-    <div class="col-3 d-flex align-items-center gap-2">
+    <div class="col-4 d-flex align-items-center gap-2">
       <span class="mix-icon">drag_indicator</span>
 
       <mix-input [size]="'s'"
@@ -10,13 +10,19 @@
                  formControlName="displayName"></mix-input>
     </div>
 
-    <div class="col-3">
-      <mix-input [size]="'s'"
-                 placeHolder="Unique system name"
-                 formControlName="systemName"></mix-input>
+    <div class="col-4">
+      <div class="d-flex gap-1">
+        <mix-button type="outline"
+                    [iconBtn]="true"
+                    size="s"><span class="mix-icon">refresh</span></mix-button>
+        <mix-input [closable]="false"
+                   [size]="'s'"
+                   placeHolder="Unique system name"
+                   formControlName="systemName"></mix-input>
+      </div>
     </div>
 
-    <div class="col-3">
+    <div class="col-2">
       <mix-button class="w-100 data-type-select"
                   type="outline"
                   (click)="showDataTypeDialog($event, dataTypePicker)"
@@ -91,5 +97,4 @@
       </div>
     </div>
   </div>
-
 </ng-template>
