--- a/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.html
@@ -74,8 +74,14 @@
                           formControlName="displayName"></mix-form-error>
 
           <p class="content-label mt-3">System Name</p>
-          <mix-input placeHolder="Unique system name"
-                     formControlName="systemName"></mix-input>
+          <div class="d-flex gap-1">
+            <mix-button [iconBtn]="true"
+                        [type]="'outline'"
+                        (click)="updateSystemName(form.value.displayName || '')"><span class="mix-icon">refresh</span></mix-button>
+            <mix-input placeHolder="Unique system name"
+                       formControlName="systemName"></mix-input>
+          </div>
+
 
           <mix-form-error class="mt-1"
                           formControlName="systemName"></mix-form-error>
@@ -120,21 +126,21 @@
 
           <div class="entity-table-header mt-3">
             <div class="row">
-              <div class="col-3 name">
+              <div class="col-4 name">
                 <div>Display name</div>
               </div>
 
-              <div class="col-3">
+              <div class="col-4">
                 <div>System name</div>
               </div>
 
-              <div class="col-3">
+              <div class="col-2">
                 <div>Data type</div>
               </div>
             </div>
           </div>
 
-          <ng-container *ngFor="let entity of data?.columns ?? []; let i = index">
+          <ng-container *ngFor="let entity of data?.columns ?? []; let i = index; trackBy:identify">
             <mix-entity-form class="mt-3"
                              [entity]="entity"
                              (deleteEntity)="removeEntity($event, i)"
