--- a/apps/mix-cms/src/app/pages/portal/database/database.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database.component.html
@@ -10,7 +10,8 @@
       <div class="toolbar-separator"></div>
       <mix-button class="mr-1"
                   type="secondary-danger"
-                  [disabled]="!selectedPages.length"
+                  [disabled]="!selectedTable.length"
+                  (click)="onDeleteTable()"
                   size="s">
         <span class="material-symbols-outlined"> delete </span>&nbsp;
         Delete(s)</mix-button>
@@ -22,7 +23,7 @@
                       [loading]="state.status === 'Loading'"
                       [pageInfo]="state.pageInfo"
                       [searchFieldOptions]="['displayName']"
-                      (itemsSelectedChange)="selectedPages = $event || []"
+                      (itemsSelectedChange)="selectedTable = $event || []"
                       (pageChange)="store.changePage($event)"
                       (searchChange)="
           store.searchChange($event.searchText, $event.searchField)
