--- a/libs/mix-ui/src/input/input.component.html
+++ b/libs/mix-ui/src/input/input.component.html
@@ -1,7 +1,7 @@
 <ng-container *tuiLet="autoCompleteItems$ | async as autoCompletes">
   <tui-input *ngIf="control"
              [formControl]="control"
-             [tuiTextfieldCleaner]="true"
+             [tuiTextfieldCleaner]="closable"
              [tuiTextfieldIconLeft]="searchIcon ? 'tuiIconSearchLarge' : undefined"
              [tuiTextfieldLabelOutside]="!floatingLabel"
              [tuiTextfieldSize]="size">
