--- a/apps/mix-cms/src/app/components/entity-form/entity-form.component.html
+++ b/apps/mix-cms/src/app/components/entity-form/entity-form.component.html
@@ -14,6 +14,7 @@
       <div class="d-flex gap-1">
         <mix-button type="outline"
                     [iconBtn]="true"
+                    (click)="updateSystemName()"
                     size="s"><span class="mix-icon">refresh</span></mix-button>
         <mix-input [closable]="false"
                    [size]="'s'"
