feat: update navigation menu

--- a/apps/mix-cms/src/app/pages/portal/database/database.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database.component.html
@@ -6,7 +6,7 @@
       <div class="toolbar-separator"></div>
       <mix-button (click)="createDatabase()"
                   size="s"><span class="material-symbols-outlined"> add </span>&nbsp; New
-        Table</mix-button>
+        MixDb</mix-button>
       <div class="toolbar-separator"></div>
       <mix-button class="mr-1"
                   type="secondary-danger"
