--- a/apps/mix-cms/src/app/components/entity-form/entity-form.component.scss
+++ b/apps/mix-cms/src/app/components/entity-form/entity-form.component.scss
@@ -9,6 +9,7 @@ mix-entity-form {
   padding: 12px;
   border: 1px solid var(--border-color-default);
   border-radius: var(--border-radius-default);
+  background-color: var(--background-color-primary);
   position: relative;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
     rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
