feat: update drag effect

--- a/apps/mix-cms/src/app/components/entity-form/entity-form.component.scss
+++ b/apps/mix-cms/src/app/components/entity-form/entity-form.component.scss
@@ -62,3 +62,11 @@ mix-entity-form {
     }
   }
 }
+
+mix-entity-form.cdk-drag-placeholder {
+  opacity: 0.3;
+
+  .entity-form {
+    border: 2px dashed;
+  }
+}
