--- a/apps/mix-cms/src/app/pages/portal/database/database.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database.component.html
@@ -39,7 +39,7 @@
                 {{ data.displayName }}
               </div>
 
-              <div class="mix-db__highlight">
+              <div class="mix-db__highlight --ring">
                 {{ data.systemName }}
               </div>
             </div>
@@ -73,7 +73,7 @@
              mixTableColumn>
           <ng-template let-data
                        mixColumnCell>
-            <div class="mix-db__highlight">
+            <div class="mix-db__highlight --orange">
               {{ data.columns.length }} column(s)
             </div>
           </ng-template>
