--- a/libs/mix-ui/src/data-table/data-table.component.html
+++ b/libs/mix-ui/src/data-table/data-table.component.html
@@ -24,173 +24,165 @@
     <tui-loader class="h-100"
                 [overlay]="true"
                 [showLoader]="(loading && !dataset.length) || forceLoading">
-      <cdk-virtual-scroll-viewport #viewport
-                                   class="viewport"
-                                   [itemSize]="50"
-                                   [maxBufferPx]="500"
-                                   [minBufferPx]="400">
-        <table *ngIf="tableColumns"
-               [columns]="tableColumns"
-               tuiTable>
-          <thead>
-            <tr tuiThGroup>
-              <ng-container *ngFor="let col of displayColumns; let i = index">
-                <th *tuiHead="col.key"
-                    [resizable]="true"
-                    [sorter]="null"
-                    [sticky]="true"
-                    tuiTh>
-                  <div class="d-flex align-items-center">
-                    <tui-checkbox *ngIf="i === 0"
-                                  class="me-4"
-                                  [ngModel]="isAllSelected"
-                                  [size]="'l'"
-                                  (click)="$event.stopPropagation()"
-                                  (ngModelChange)="markAllChecked($event)"></tui-checkbox>
-
-                    <div class="flex-grow-1">
-                      <ng-container *ngIf="col.tplHeader">
-                        <ng-container *ngTemplateOutlet="col.tplHeader.template"></ng-container>
-                      </ng-container>
-
-                      <ng-container *ngIf="!col.tplHeader && col.showHeader">
-                        <div>
-                          <div>{{ col.header }}</div>
-                        </div>
-                      </ng-container>
-                    </div>
-                  </div>
-                </th>
-              </ng-container>
-
-              <th *tuiHead="'MENU'"
+      <table *ngIf="tableColumns"
+             [columns]="tableColumns"
+             tuiTable>
+        <thead>
+          <tr tuiThGroup>
+            <ng-container *ngFor="let col of displayColumns; let i = index">
+              <th *tuiHead="col.key"
+                  [resizable]="true"
                   [sorter]="null"
                   [sticky]="true"
-                  tuiTh></th>
-            </tr>
-          </thead>
+                  tuiTh>
+                <div class="d-flex align-items-center">
+                  <tui-checkbox *ngIf="i === 0"
+                                class="me-4"
+                                [ngModel]="isAllSelected"
+                                [size]="'l'"
+                                (click)="$event.stopPropagation()"
+                                (ngModelChange)="markAllChecked($event)"></tui-checkbox>
 
-          <tbody *ngIf="dataset"
-                 [cdkDropListDisabled]="!enableDnd"
-                 [data]="dataset"
-                 (cdkDropListDropped)="drop($event)"
-                 cdkDropList
-                 tuiTbody>
-            <tr *cdkVirtualFor="let item of dataset"
-                [ngClass]="{
-                '--selected': !!currentSelectedItemDic[$any(item)[uniqueKey]]
-              }"
-                cdkDrag
-                tuiTr>
-              <ng-container *ngFor="let col of displayColumns; let i = index">
-                <td *tuiCell="col.key"
-                    class="mix-data-table__td"
-                    [ngStyle]="{ width: col.width, 'min-width': col.minWidth }"
-                    tuiTd>
-                  <div class="d-flex h-100 align-items-center">
-                    <tui-checkbox *ngIf="i === 0"
-                                  class="me-4"
-                                  [ngModel]="
-                        !!currentSelectedItemDic[$any(item)[uniqueKey]]
-                      "
-                                  [size]="'l'"
-                                  (ngModelChange)="onItemSelected($event, item)">
-                    </tui-checkbox>
+                  <div class="flex-grow-1">
+                    <ng-container *ngIf="col.tplHeader">
+                      <ng-container *ngTemplateOutlet="col.tplHeader.template"></ng-container>
+                    </ng-container>
 
-                    <div class="flex-grow-1">
-                      <ng-container *ngIf="col.tplCell">
-                        <ng-container *ngTemplateOutlet="
-                            col.tplCell.template;
-                            context: { $implicit: item }
-                          "></ng-container>
-                      </ng-container>
-
-                      <ng-container *ngIf="!col.tplCell">
-                        {{ $any(item)[col.key] ?? '--' }}
-                      </ng-container>
-                    </div>
+                    <ng-container *ngIf="!col.tplHeader && col.showHeader">
+                      <div>
+                        <div>{{ col.header }}</div>
+                      </div>
+                    </ng-container>
                   </div>
-                </td>
-              </ng-container>
+                </div>
+              </th>
+            </ng-container>
 
-              <td *tuiCell="'MENU'"
+            <th *tuiHead="'MENU'"
+                [sorter]="null"
+                [sticky]="true"
+                tuiTh></th>
+          </tr>
+        </thead>
+
+        <tbody *ngIf="dataset"
+               [cdkDropListDisabled]="!enableDnd"
+               [data]="dataset"
+               (cdkDropListDropped)="drop($event)"
+               cdkDropList
+               tuiTbody>
+          <tr *ngFor="let item of dataset; trackBy: dataTrackBy"
+              [ngClass]="{
+              '--selected': !!currentSelectedItemDic[$any(item)[uniqueKey]]
+            }"
+              cdkDrag
+              tuiTr>
+            <ng-container *ngFor="let col of displayColumns; let i = index">
+              <td *tuiCell="col.key"
                   class="mix-data-table__td"
+                  [ngStyle]="{ width: col.width, 'min-width': col.minWidth }"
                   tuiTd>
-                <tui-hosted-dropdown [content]="dropdown"
-                                     tuiDropdownAlign="right">
-                  <mix-button type="outline"
-                              [iconBtn]="true"
-                              size="s">
-                    <span class="mix-icon"> more_horiz </span></mix-button>
-                </tui-hosted-dropdown>
-                <ng-template #dropdown
-                             let-close="close"><tui-data-list>
-                    <tui-opt-group>
-                      <button *ngFor="let v of contextMenus"
-                              (click)="v.action(item)"
-                              tuiOption>
-                        <div class="d-flex align-items-center gap-3">
-                          <span class="mix-icon"> {{ v.icon }}</span>
-                          <div>
-                            {{ v.label }}
-                          </div>
-                        </div>
-                      </button>
-                    </tui-opt-group>
-                  </tui-data-list>
-                </ng-template>
-              </td>
-            </tr>
-          </tbody>
+                <div class="d-flex h-100 align-items-center">
+                  <tui-checkbox *ngIf="i === 0"
+                                class="me-4"
+                                [ngModel]="!!currentSelectedItemDic[$any(item)[uniqueKey]]"
+                                [size]="'l'"
+                                (ngModelChange)="onItemSelected($event, item)">
+                  </tui-checkbox>
 
-          <tbody *ngIf="dataset && !dataset.length">
-            <tr class="mix-data-table__paging">
-              <td [colSpan]="columns.length">
-                <div class="mix-data-table__empty-content">
-                  <svg width="150"
-                       height="130"
-                       viewBox="0 0 184 152"
-                       xmlns="http://www.w3.org/2000/svg">
-                    <g fill="none"
-                       fill-rule="evenodd">
-                      <g transform="translate(24 31.67)">
-                        <ellipse class="mix-data-table__empty-content-default-ellipse"
-                                 cx="67.797"
-                                 cy="106.89"
-                                 rx="67.797"
-                                 ry="12.668"></ellipse>
-                        <path class="mix-data-table__empty-content-default-path-1"
-                              d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z">
-                        </path>
-                        <path class="mix-data-table__empty-content-default-path-2"
-                              d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
-                              transform="translate(13.56)"></path>
-                        <path class="mix-data-table__empty-content-default-path-3"
-                              d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"></path>
-                        <path class="mix-data-table__empty-content-default-path-4"
-                              d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z">
-                        </path>
-                      </g>
-                      <path class="mix-data-table__empty-content-default-path-5"
-                            d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z">
-                      </path>
-                      <g class="mix-data-table__empty-content-default-g"
-                         transform="translate(149.65 15.383)">
-                        <ellipse cx="20.654"
-                                 cy="3.167"
-                                 rx="2.849"
-                                 ry="2.815"></ellipse>
-                        <path d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"></path>
-                      </g>
-                    </g>
-                  </svg>
-                  <p>No data found</p>
+                  <div class="flex-grow-1">
+                    <ng-container *ngIf="col.tplCell">
+                      <ng-container *ngTemplateOutlet="
+                          col.tplCell.template;
+                          context: { $implicit: item }
+                        "></ng-container>
+                    </ng-container>
+
+                    <ng-container *ngIf="!col.tplCell">
+                      {{ $any(item)[col.key] ?? '--' }}
+                    </ng-container>
+                  </div>
                 </div>
               </td>
-            </tr>
-          </tbody>
-        </table>
-      </cdk-virtual-scroll-viewport>
+            </ng-container>
+
+            <td *tuiCell="'MENU'"
+                class="mix-data-table__td"
+                tuiTd>
+              <tui-hosted-dropdown [content]="dropdown"
+                                   tuiDropdownAlign="right">
+                <mix-button type="outline"
+                            [iconBtn]="true"
+                            size="s">
+                  <span class="mix-icon"> more_horiz </span></mix-button>
+              </tui-hosted-dropdown>
+              <ng-template #dropdown
+                           let-close="close"><tui-data-list>
+                  <tui-opt-group>
+                    <button *ngFor="let v of contextMenus"
+                            (click)="v.action(item)"
+                            tuiOption>
+                      <div class="d-flex align-items-center gap-3">
+                        <span class="mix-icon"> {{ v.icon }}</span>
+                        <div>
+                          {{ v.label }}
+                        </div>
+                      </div>
+                    </button>
+                  </tui-opt-group>
+                </tui-data-list>
+              </ng-template>
+            </td>
+          </tr>
+        </tbody>
+
+        <tbody *ngIf="dataset && !dataset.length">
+          <tr class="mix-data-table__paging">
+            <td [colSpan]="columns.length">
+              <div class="mix-data-table__empty-content">
+                <svg width="150"
+                     height="130"
+                     viewBox="0 0 184 152"
+                     xmlns="http://www.w3.org/2000/svg">
+                  <g fill="none"
+                     fill-rule="evenodd">
+                    <g transform="translate(24 31.67)">
+                      <ellipse class="mix-data-table__empty-content-default-ellipse"
+                               cx="67.797"
+                               cy="106.89"
+                               rx="67.797"
+                               ry="12.668"></ellipse>
+                      <path class="mix-data-table__empty-content-default-path-1"
+                            d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z">
+                      </path>
+                      <path class="mix-data-table__empty-content-default-path-2"
+                            d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
+                            transform="translate(13.56)"></path>
+                      <path class="mix-data-table__empty-content-default-path-3"
+                            d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"></path>
+                      <path class="mix-data-table__empty-content-default-path-4"
+                            d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z">
+                      </path>
+                    </g>
+                    <path class="mix-data-table__empty-content-default-path-5"
+                          d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z">
+                    </path>
+                    <g class="mix-data-table__empty-content-default-g"
+                       transform="translate(149.65 15.383)">
+                      <ellipse cx="20.654"
+                               cy="3.167"
+                               rx="2.849"
+                               ry="2.815"></ellipse>
+                      <path d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"></path>
+                    </g>
+                  </g>
+                </svg>
+                <p>No data found</p>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </tui-loader>
   </div>
 
