--- a/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.scss
+++ b/apps/mix-cms/src/app/pages/portal/database/database-detail/database-detail.component.scss
@@ -8,7 +8,7 @@
     margin-bottom: 12px;
     width: 220px;
     height: calc(100% - 24px);
-    background-color: var(--background-color-03);
+    background-color: var(--background-color-primary);
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
     padding: 8px;
