--- a/apps/mix-cms/src/app/pages/portal/database/database.component.html
+++ b/apps/mix-cms/src/app/pages/portal/database/database.component.html
@@ -8,8 +8,7 @@
                   size="s"><span class="material-symbols-outlined"> add </span>&nbsp; New
         MixDb</mix-button>
       <div class="toolbar-separator"></div>
-      <mix-button class="mr-1"
-                  type="secondary-danger"
+      <mix-button type="secondary-danger"
                   [disabled]="!selectedTable.length"
                   (click)="onDeleteTable()"
                   size="s">
