--- a/libs/mix-ui/src/data-table/data-table.component.scss
+++ b/libs/mix-ui/src/data-table/data-table.component.scss
@@ -100,7 +100,7 @@
     font-size: 14px;
   }
 
-  tr:hover td {
+  tr:hover td:not(.mix-data-table__empty-data) {
     background: var(--highlight-background-color);
   }
 
@@ -117,6 +117,11 @@
       border-top: 1px solid var(--primary-color) !important;
       border-bottom: 1px solid var(--primary-color) !important;
     }
+  }
+
+  &__empty-data {
+    padding-top: 120px;
+    padding-bottom: 120px;
   }
 
   &__empty-content {
